--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,9 +2,14 @@
 
 export(convertSVG)
 export(ideogram)
+export(svg2jpg)
+export(svg2pdf)
+export(svg2png)
+export(svg2tiff)
 importFrom(ggplot2,ggsave)
 importFrom(grDevices,colorRampPalette)
 importFrom(grImport2,pictureGrob)
 importFrom(grImport2,readPicture)
 importFrom(rsvg,rsvg_svg)
 importFrom(scales,rescale)
+importFrom(tools,file_ext)
