--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,13 +2,12 @@ Package: RIdeogram
 Type: Package
 Title: Drawing SVG graphics to visualize and map genome-wide data in idiograms
 Version: 0.1.0
-Author: c(person("Zhaodong", "Hao", email = "haozd1992@163.com", role = c("aut", "cre")), 
-        person("Dekang", "Lv", email = "dekanglv@126.com", role = "aut"),
-        person("Guangchuang", "Yu", email = "guangchuangyu@gmail.com", role = ("aut", "cre")),
-        person("Ying", "Ge", email = "geying.tju@gmail.com", role = "aut"),
-        person("Jisen", "Shi", email = "Jshi@njfu.edu.cn", role = "aut"),
-        person("Jinhui", "Chen", email = "chenjh@njfu.edu.cn", role = "aut")
-        )
+Authors@R: c(person("Zhaodong", "Hao", email = "haozd1992@163.com", role = c("aut", "cre")),
+	     person("Dekang", "Lv", email = "dekanglv@126.com", role = "aut"),
+	     person("Guangchuang", "Yu", email = "guangchuangyu@gmail.com", role = "aut"),
+	     person("Ying", "Ge", email = "geying.tju@gmail.com", role = "aut"),
+	     person("Jisen", "Shi", email = "Jshi@njfu.edu.cn", role = "aut"),
+	     person("Jinhui", "Chen", email = "chenjh@njfu.edu.cn", role = "aut"))
 Maintainer: Zhaodong Hao <haozd1992@163.com>
 Description: This package was developed to visualize and map whole-genome data in chromosomes with no restriction of species.
 License: Artistic-2.0
@@ -23,7 +22,7 @@ Imports:
   scales,
   tools
 RoxygenNote: 6.1.1
-Suggests: 
+Suggests:
     knitr,
     rmarkdown
 VignetteBuilder: knitr
