--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,3 +15,4 @@ importFrom(rsvg,rsvg_svg)
 importFrom(scales,rescale)
 importFrom(tools,file_ext)
 importFrom(tidyr,separate)
+importFrom(utils,read.table)
